# PROD-second-tour

solution/: Dockerfile  dev_run.sh  docker-compose.yaml  docker_run.sh  pyproject.toml
solution/app/: __init__.py
solution/app/api/: __init__.py  api_router.py  auth.py  countries.py  friends.py  me.py  ping.py  posts.py  profiles.py
solution/app/core/: config.py  exceptions.py  routers.py  server.py  utils.py
solution/app/crud/: country.py  friends.py  post.py  token.py  user.py
solution/app/db/: engine.py  session.py
solution/app/models/: __init__.py  country.py  friend.py  post.py  review.py  tag.py  token.py  user.py
solution/app/schemas/: country.py  error.py  friend.py  post.py  status.py  token.py  user.py
