[tool.poetry]
name = "test-python-fadegor05"
version = "0.1.0"
description = ""
authors = ["fadegor05 <fad.egor05@gmail.com>"]
readme = "README.md"
packages = [{include = "test_python_fadegor05"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
